Bug 365870 - [Libarchive] Ark hangs when aborting a DeleteJob
Summary: [Libarchive] Ark hangs when aborting a DeleteJob
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: plugins (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Ragnar Thomsen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-19 16:36 UTC by Elvis Angelaccio
Modified: 2016-10-21 12:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-07-19 16:36:48 UTC
See steps below.

Reproducible: Always

Steps to Reproduce:
1. Open a huge tar-based archive
2. Delete some file from it
3. Cose Ark while the Job is still running

Actual Results:  
Ark hangs, the process seems still running (I get 25% cpu load from the ark process).

Expected Results:  
Ark should quit gracefully

CLI-based archives are not affected.
Comment 1 Elvis Angelaccio 2016-10-21 12:46:00 UTC
Git commit d587749dbdb1f13cd497934d15388488bc199c2b by Elvis Angelaccio.
Committed on 21/10/2016 at 12:41.
Pushed by elvisangelaccio into branch 'Applications/16.08'.

libarchive: properly kill DeleteJobs

Use m_abortOperation like the other jobs do.
FIXED-IN: 16.08.3

M  +1    -1    plugins/libarchive/readwritelibarchiveplugin.cpp

http://commits.kde.org/ark/d587749dbdb1f13cd497934d15388488bc199c2b