libarchive: properly kill DeleteJobs

Use m_abortOperation like the other jobs do.

BUG: 365870
FIXED-IN: 16.08.3